--- a/.gitignore
+++ b/.gitignore
@@ -70,11 +70,12 @@ crashlytics-build.properties
 [Aa]ssets/[Ss]treamingAssets/aa.meta
 [Aa]ssets/[Ss]treamingAssets/aa/*
 
+.idea
 
 # Wwise
 *.validationcache
 *.wsettings
-IncrementalSoundBankData.xml 
+IncrementalSoundBankData.xml
 *.cache
 *.backup
 *.akd
